# bazel_rules_bt

./: BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  multitool.lock.json  repo.bzl
.bcr/: metadata.template.json
.github/workflows/: main.yml  publish.yml  tag-and-release.yml
docs/: AI_GIT.md
integration/: MODULE.bazel  audacity-sources-3.7.4.tar.gz.torrent  ipfire-2.29-core196-aarch64.img.xz.torrent
integration/docs/: AI_GIT.md
