load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
#load("@rules_pkg//pkg/private/tar:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@bazel_skylib_gazelle_plugin//bzl",
    ],
)

bzl_library(
    name = "repo",
    srcs = ["repo.bzl"],
)


