module(
    name = "rules_bt",
    version = "0.0.0",
    compatibility_level = 0,
)

#bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)
bazel_dep(name = "bazel_lib", version = "3.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.2", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.45.0", dev_dependency = True)
#bazel_dep(name = "rules_pkg", version = "1.1.0", dev_dependency = True)

bazel_dep(name = "rules_multitool", version = "1.8.0")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(
    # We must choose an alternate hub name to allow other modules to have their
    # own hubs.
    hub_name = "rules_bt_multitool",
    lockfile = "//:multitool.lock.json",
)
use_repo(multitool, "multitool", "rules_bt_multitool")
