module(
    name = "bazel_rules_bt__integration",
    version = "0.0",
    compatibility_level = 0,
)

bazel_dep(name = "bazel_rules_bt", version = "0.0")
local_path_override(module_name = "bazel_rules_bt", path = "../")

bt_file = use_repo_rule("@bazel_rules_bt//:repo.bzl", "bt_file")
bt_file(
    name = "ubuntu",
    uri = "https://releases.ubuntu.com/25.04/ubuntu-25.04-desktop-amd64.iso.torrent?_gl=1*xx0iy1*_gcl_au*MTYxODU5Nzk0Ny4xNzUxMDk3Mzkz",
    file = "ubuntu-25.04-desktop-amd64.iso",
    integrity = "tbd",
    quiet = False,
)
