module(
    name = "bazel_rules_bt__integration",
    version = "0.0",
    compatibility_level = 0,
)

bazel_dep(name = "bazel_rules_bt", version = "0.0")
local_path_override(module_name = "bazel_rules_bt", path = "../")

bt_file = use_repo_rule("@bazel_rules_bt//:repo.bzl", "bt_file")
bt_file(
    name = "test_repo",
    uri = "@@//:ipfire-2.29-core196-aarch64.img.xz.torrent",
    file = "ipfire-2.29-core196-aarch64.img.xz",
    integrity = "tbd",
    quiet = False,
)

bt_archive = use_repo_rule("@bazel_rules_bt//:repo.bzl", "bt_archive")
bt_archive(
    name = "test_repo_archive",
    uri = "@@//:audacity-sources-3.7.4.tar.gz.torrent",
    file = "audacity-sources-3.7.4.tar.gz",
    strip_prefix = "audacity-sources-3.7.4",
    integrity = "tbd",
    quiet = False,
    build_file_content = """#
filegroup(
    name = "file",
    srcs = [
        "{name}",
    ],
)
exports_files([
    "{name}",
])
""",
)
